# mason4agents

./: .coding-agent-instructions  .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  README.zh.md  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
crates/mason4agents/: Cargo.toml
crates/mason4agents/src/: archive.rs  doctor.rs  download.rs  expressions.rs  installer.rs  lib.rs  linker.rs  locks.rs  main.rs  package_spec.rs  paths.rs  platform.rs  progress.rs  purl.rs  registry.rs  store.rs  suggestions.rs  types.rs
crates/mason4agents/src/installers/: build.rs  generic.rs  github.rs  manager.rs  mod.rs  npm.rs  openvsx.rs
crates/mason4agents/tests/: cli_fixture.rs  package_spec_asset_target.rs  real_registry_smoke.rs
docs/: UI.md  recap.md
docs/plans/: 1-feat-suggestions.md  2-feat-operation-progress.md  3-ci.md  4-bug-hunting.md
scripts/: publish.mjs  sync-version.mjs
src/: mason-args.ts
src/pi/: binary.ts  cli.ts  extension.ts  lsp-config.ts  mason-command.ts  mason-panel.ts  mason-render.ts  omp-lsp-defaults.ts  path-env.ts  pi-tools.ts  register.ts
src/tui/: mason-render.ts  mason-tui.ts
test/pi/: binary-path.test.ts  cli-bridge.test.ts  extension-start-url.test.ts  lsp-config.test.ts  mason-command.test.ts  native-packages.test.ts  omp-lsp-defaults.test.ts  panel-extension.test.ts  pi-tools.test.ts  release-workflow.test.ts  version-sync.test.ts
test/tui/: mason-tui.test.ts
