[package]
name = "mason4agents"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mason4agents"
path = "src/lib.rs"

[[bin]]
name = "mason4agents"
path = "src/main.rs"
[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
fs2 = "0.4"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.10"
thiserror = "1.0"
urlencoding = "2.1"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate", "deflate64"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.1"
